native/crates/specular-scene/tests/snapshots/groups__an_entered_group_has_a_dashed_ring_round_it.snap
---
source: crates/specular-scene/tests/groups.rs
expression: app.scene_snapshot()
---
screen rect 100,100 400x300 r=2 fill=#f4f4f573
canvas rect 140,140 100x100 fill=#b5b9c0 stroke=#464a53/2/centre
screen rect 100,100 400x300 r=2 stroke=#71717a40/1.5/inside
screen text "Moodboard" 100,79.5 wrap=400 ellipsis box-h=16.5 11/15.4 w500 #3f3f46 middle clip=100,79.5 400x20.5
canvas rect 100,600 100x100 fill=#b5b9c0 stroke=#464a53/2/centre
screen rect 99,99 402x302 stroke=#3b82f6/1/inside
screen rect 139,139 102x102 stroke=#3b82f6/1/inside
screen path M96,96 L504,96 L504,404 L96,404 Z stroke=#3b82f6/1 dash=5/3
screen rect 135,135 8x8 fill=#ffffff stroke=#3b82f6/1/inside
screen rect 237,135 8x8 fill=#ffffff stroke=#3b82f6/1/inside
screen rect 237,237 8x8 fill=#ffffff stroke=#3b82f6/1/inside
screen rect 135,237 8x8 fill=#ffffff stroke=#3b82f6/1/inside
