native/crates/specular-scene/tests/snapshots/groups__the_group_under_a_drag_gets_a_selection_ring.snap
---
source: crates/specular-scene/tests/groups.rs
expression: app.scene_snapshot()
---
screen rect 100,100 400x300 r=2 fill=#f4f4f573
canvas rect 140,140 100x100 fill=#b5b9c0 stroke=#464a53/2/centre
screen rect 100,100 400x300 r=2 stroke=#71717a40/1.5/inside
screen text "Moodboard" 100,79.5 wrap=400 ellipsis box-h=16.5 11/15.4 w500 #3f3f46 middle clip=100,79.5 400x20.5
canvas rect 260,260 100x100 fill=#b5b9c0 stroke=#464a53/2/centre
screen rect 259,259 102x102 stroke=#3b82f6/1/inside
screen rect 100,100 400x300 stroke=#3b82f6/2/outside
screen rect 255,255 8x8 fill=#ffffff stroke=#3b82f6/1/inside
screen rect 357,255 8x8 fill=#ffffff stroke=#3b82f6/1/inside
screen rect 357,357 8x8 fill=#ffffff stroke=#3b82f6/1/inside
screen rect 255,357 8x8 fill=#ffffff stroke=#3b82f6/1/inside
